overflow fix 2

--- a/style/index.css
+++ b/style/index.css
@@ -46,9 +46,9 @@ body {
     background: var(--body-background);
 }
 
-* {
-    outline: 2px solid black !important;
-}
+/** {*/
+/*    outline: 2px solid black !important;*/
+/*}*/
 
 .preload *, .preload *::before, .preload *::after {
     -webkit-transition: none !important;
